--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react": "^16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
+    "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "^1.5.2",
     "react-native-maps": "^0.25.0",
     "react-native-maps-directions": "^1.7.3",
     "react-native-router-flux": "^4.0.6",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^4.0.10",
+    "react-navigation": "^2.18.3",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
