--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.5.2",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "^0.25.0",
     "react-native-maps-directions": "^1.7.3",
     "react-native-router-flux": "^4.0.6",
