--- a/package.json
+++ b/package.json
@@ -8,25 +8,29 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.25",
-    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "expo": "^35.0.1",
     "i": "^0.3.6",
     "lodash": "^4.17.15",
-    "npm": "^6.13.2",
-    "react": "^16.8.3",
+    "npm": "^6.13.4",
+    "react": "^16.12.0",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
     "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.5.2",
+    "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "^0.25.0",
     "react-native-maps-directions": "^1.7.3",
+    "react-native-reanimated": "~1.2.0",
     "react-native-router-flux": "^4.0.6",
+    "react-native-screens": "~1.0.0-alpha.23",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
-    "react-navigation": "^2.18.3",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.6.2",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
