--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "expo": "^35.0.1",
+    "firebase": "^7.6.0",
     "i": "^0.3.6",
     "lodash": "^4.17.15",
     "npm": "^6.13.2",
