--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-gesture-handler": "~1.3.0",
     "react-native-maps": "^0.25.0",
     "react-native-maps-directions": "^1.7.3",
+    "react-native-paper": "^3.3.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "^0.11.7",
